# hed-schemas

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HED_score_0.0.0.mediawiki  HED_score_0.0.1.mediawiki  HED_test_0.0.1.mediawiki  HED_test_v0.0.1.mediawiki  NOTES.md  README.md  RELEASE_GUIDE.md  codespell.sh  library_data.json  lychee.toml  pyproject.toml  readthedocs.yml  requirements-dev.txt  schema_versions.json  setup.cfg
.github/: copilot-instructions.md  dependabot.yaml
.github/actions/get-changed-files/: action.yml
.github/workflows/: add_hed_ids.yaml  black.yaml  check_schemas.yaml  ci.yaml  codespell.yaml  create_main_pr.yaml  deploy-docs.yaml  docs.yaml  docs.yml  links.yaml  mdformat.yaml  pre_commit.yaml  ruff.yaml  test_get_source_branch.yaml  update_and_convert_schemas.yaml  update_manifests.yaml  validate_schemas.yaml  verify_source_branch.yaml
docs/: Introduction.md  Library_schema_overview.md  SCORE_library.md  api.rst  api2.rst  conf.py  contributing.md  developer_guide.md  index.rst  introduction.md  requirements.txt  schemas_overview.md  schemas_reference.md  user_guide.md
docs/_static/: gh_icon_fix.js
docs/_templates/: base.html
docs/source/: Documentation.md  Library_schema_overview.md  SCORE_library.md  api2.rst  conf.py  contributing.md  developer_guide.md  hed_lang_schema.md  hed_language_schema.md  hed_lisa_schema.md  hed_score_library.md  hed_score_schema.md  index.rst  introduction.md  introduction_to_hed_schemas.md  schema_development_guide.md  schema_revision_guidelines.md  schemas_reference.md  user_guide.md
docs/source/_static/: custom.css  gh_icon_fix.js
docs/source/_templates/: layout.html
hedwiki/: HED_score_0.0.1.mediawiki  HED_test_0.0.1.mediawiki  HED_test_1.0.1.mediawiki  HED_test_1.0.2.mediawiki
hedwiki/score/: HED_score_0.0.1.mediawiki  HED_score_0.0.2.mediawiki
hedxml/: HED_score_0.0.0.xml  HED_score_0.0.1.xml  HED_test_0.0.1.xml  HED_test_1.0.2.xml  HED_test_v0.0.1.xml
hedxml/score/: HED_score_0.0.1.xml  HED_score_0.0.2.xml
library_schemas/lang/: CHANGELOG.md  CONTRIBUTORS.md  README.md
library_schemas/lang/hedjson/: HED_lang_1.0.0.json  HED_lang_1.1.0.json
library_schemas/lang/hedwiki/: HED_lang_1.0.0.mediawiki  HED_lang_1.1.0.mediawiki
library_schemas/lang/hedxml/: HED_lang_1.0.0.xml
library_schemas/lang/prerelease/: HED_lang_0.0.1.mediawiki  HED_lang_0.0.1.xml  HED_lang_1.0.0.mediawiki  HED_lang_1.0.0.xml  HED_lang_1.0.1.mediawiki  HED_lang_1.0.1.xml  HED_lang_1.1.0.mediawiki  HED_lang_1.1.0.xml  HED_lang_1.2.0.json  HED_lang_1.2.0.mediawiki  HED_lang_1.2.0.xml  PRERELEASE_CHANGES.md  lang0.0.1_tags.tsv
library_schemas/language/: README.md
library_schemas/language/prerelease/: HED_language_0.0.1.mediawiki  HED_language_0.0.1.xml
library_schemas/lisa/: README.md
library_schemas/lisa/prerelease/: HED_lisa_0.0.1.mediawiki  HED_lisa_0.0.1.xml
library_schemas/mouse/: CONTRIBUTORS.md  README.md
library_schemas/mouse/prerelease/: HED_mouse_1.0.0.json  HED_mouse_1.0.0.mediawiki  HED_mouse_1.0.0.xml  PRERELEASE_CHANGES.md
library_schemas/score/: CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md
library_schemas/score/hedjson/: HED_score_2.1.0.json
library_schemas/score/hedwiki/: HED_score_1.0.0.mediawiki  HED_score_1.2.0.mediawiki  HED_score_2.1.0.mediawiki
library_schemas/score/hedxml/: HED_score_0.0.1.xml  HED_score_1.0.0.xml
library_schemas/score/prerelease/: CHANGES.md  HED_score_1.0.0.mediawiki  HED_score_1.0.0.xml  HED_score_1.0.1.mediawiki  HED_score_1.0.1.xml  HED_score_1.1.0.mediawiki  HED_score_1.1.0.xml  HED_score_1.1.1.mediawiki  HED_score_1.1.1.xml  HED_score_2.0.0.mediawiki  HED_score_2.0.0.xml  HED_score_2.1.0.mediawiki  HED_score_2.1.0.xml  HED_score_2.2.0.json  HED_score_2.2.0.mediawiki  HED_score_2.2.0.xml  PRERELEASE_CHANGES.md  PROPOSED.md
library_schemas/slam/: CONTRIBUTORS.md  README.md
library_schemas/slam/prerelease/: HED_slam_1.0.0.json  HED_slam_1.0.0.mediawiki  HED_slam_1.0.0.xml
library_schemas/testlib/: README.md
library_schemas/testlib/hedjson/: HED_testlib_1.0.2.json  HED_testlib_2.0.0.json  HED_testlib_2.1.0.json  HED_testlib_2.2.0.json  HED_testlib_3.0.0.json
library_schemas/testlib/hedwiki/: HED_testlib_1.0.2.mediawiki  HED_testlib_2.0.0.mediawiki  HED_testlib_2.1.0.mediawiki  HED_testlib_2.2.0.mediawiki  HED_testlib_3.0.0.mediawiki
library_schemas/testlib/hedxml/: HED_testlib_2.0.0.xml  HED_testlib_2.1.0.mediawiki  HED_testlib_2.1.0.xml  HED_testlib_2.2.0.xml  HED_testlib_3.0.0.xml
library_schemas/testlib/prerelease/: HED_testlib_2.0.0.mediawiki  HED_testlib_2.0.1.mediawiki  HED_testlib_2.0.1.xml  HED_testlib_4.0.0.json  HED_testlib_4.0.0.mediawiki  HED_testlib_4.0.0.xml
prerelease/score/: HED_score_0.0.2.mediawiki  HED_score_0.0.2.xml
schemas_latest_json/: HEDLatest.json  HED_lang_Latest.json  HED_score_Latest.json
schemas_xml_unmerged/: HED_lang_1.2.0.xml  HED_slam_1.0.0.xml  HED_testlib_2.0.0.xml  HED_testlib_2.1.0.xml  HED_testlib_3.0.0.xml
scripts/: README.md  build-docs.bat  build-docs.sh  build_docs.py  generate_schema_versions.py  serve-sphinx.bat  serve-sphinx.sh  serve_docs.py  update_latest_json.py  verify_branch.py  verify_branch.sh  xml_to_json.py
standard_schema/: CHANGELOG.md  README.md
standard_schema/hedjson/: HED8.4.0.json
standard_schema/hedwiki/: HED8.0.0.mediawiki  HED8.1.0.mediawiki  HED8.2.0.mediawiki  HED8.4.0.mediawiki
standard_schema/hedxml/: HED8.4.0.xsd
standard_schema/prerelease/: CHANGES.md  CHANGES_ACCEPTED.md  HED8.2.0.mediawiki  HED8.2.0.xml  HED8.2.0_HED8.3.0_differences.txt  HED8.3.0.mediawiki  HED8.3.0.xml  HED8.3.0_HED8.3.0_differences_anatomyreorg.txt  HED8.4.0.mediawiki  HED8.4.0.xml  HED8.5.0.json  HED8.5.0.mediawiki  HED8.5.0.xml  PRERELEASE_CHANGES.md  PROPOSED.md  UNDER_DISCUSSION.md
test_schema/prerelease/: test_schema.mediawiki  test_schema.xml  test_schema_Tag.tsv  test_schema_UnitClass.tsv  test_schema_UnitModifier.tsv  test_schema_ValueClass.tsv
tests/: __init__.py  convert_and_update_schema.py  test_manifest_scripts.py  validate_schemas.py
(+118 files in other folders)
