# This is NOT a Python package - it's a schema repository
# The pyproject.toml file is used only for tool configuration (codespell, etc.)
# HED schemas are accessed via URLs, not pip install
# Each schema (standard, score, lang, etc.) has its own independent semantic version

[project]
name = "hed-schemas"
description = "Official HED (Hierarchical Event Descriptors) vocabulary schemas in MediaWiki, XML, JSON, and TSV formats."
readme = "README.md"
authors = [
    { name = "HED Working Group" },
]
maintainers = [
    { name = "HED maintainers", email = "hed.maintainers@gmail.com" },
]
license = {text = "MIT"}
keywords = ["HED", "hierarchical event descriptors", "schemas", "vocabulary", "neuroscience", "BIDS", "events", "metadata", "annotation"]

[project.urls]
"Homepage" = "https://www.hedtags.org/"
"Documentation" = "https://www.hedtags.org/hed-schemas/"
"Schema Browser" = "https://www.hedtags.org/hed-schema-browser/"
"Repository" = "https://github.com/hed-standard/hed-schemas/"
"Bug Tracker" = "https://github.com/hed-standard/hed-schemas/issues"
"HED Resources" = "https://www.hedtags.org/hed-resources"
"HED Specification" = "https://www.hedtags.org/hed-specification/"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "codespell>=2.2.0",
    "black[jupyter]>=26.1.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]
docs = [
    "sphinx>=7.1.0,<10.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=3.0.0",
    "pygments>=2.10.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "linkify-it-py>=2.0.3",
]

[tool.codespell]
skip = '*.git,*.pdf,*.svg,venv*,*.tsv,*.json,*.rdf,*.jsonld,*.xml,*.mediawiki,*.omn,.venv,datasets*,_build,_static,*.js,*.inv'
ignore-words-list = 'te,parms,trough'
uri-ignore-words-list = '*'

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | docs/_build
  | docs/_static
  | docs/_templates
  | standard_schema
  | library_schemas
  | schemas_latest_json
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "_build",
    "build",
    "dist",
    "docs/_build",
    "docs/_static",
    "docs/_templates",
    "standard_schema",
    "library_schemas",
    "schemas_latest_json",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
